# simple-one-neuron-NN

./: main.py  pyproject.toml
ActivationFunctions/: activation_function_abstract.py  relu_activation_function.py
Layers/: dense_layer.py  layer_abstract.py
Losses/: __init__.py  loss_abstract.py  mean_squared_error_loss.py  squared_error_loss.py
Metrics/: __init__.py  mean_absolute_error_metric.py  mean_squared_error_metric.py  metric_abstract.py
Model/: model.py  model_abstract.py
Optimizers/: gradient_descent_optimizer.py  optimizer_abtsract.py
